common-applications/test-environment/gitea-repo-sh/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx    
    nginx.ingress.kubernetes.io/proxy-body-size: 10G
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-request-buffering: "off"
  name: gitea-repo-ingress
  namespace: gitea-repo
spec:
  tls:
    - hosts:
      - gitea.test.osinfra.cn
      secretName: gitea-repo-lts
  rules:
    - host: gitea.test.osinfra.cn
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: gitea-repo
              port:
                number: 3000
