common-applications/test-environment/gitea-repo-sh/networkpolicy.yaml
kind: NetworkPolicy
metadata:
  name: gitea-repo-policy-01
  namespace: gitea-repo
spec:
  podSelector:
    matchLabels:
      app: gitea-repo
  ingress:
    - ports:
        - protocol: TCP
          port: 3000
      from:
        - podSelector:
            matchLabels:
              app: merlin-website
          namespaceSelector:
            matchLabels:
              project: merlin
  policyTypes:
    - Ingress
apiVersion: networking.k8s.io/v1
